# LuStCodeSnippets

./: .gitignore  Project.toml  README.md  bash_commands.sh  compile_module.jl  compile_module.py  gantt.ipynb  pyproject copy.toml  pyproject.toml  requirements.txt  tess_lc_extraction.ipynb
CodeSnippets_py/: __init__.py
CodeSnippets_py_demos/astronomy_demos/: absmag_demo.ipynb
LuStCodeSnippets_jl/: PlotStyles.jl  Project.toml  compile_module.jl
LuStCodeSnippets_jl/src/: Colorings.jl  DataFramesConvenience.jl  LuStCodeSnippets_jl.jl  PlotStyles.jl
LuStCodeSnippets_jl_demos/: Colorings_demo.jl  DataFramesConvenience_demo.jl  PlotStyle_demo.jl  PlotStyles_demo.jl
LuStCodeSnippets_jl_tests/: Colorings_test.jl  runtests.jl
LuStCodeSnippets_py/: __init__.py
LuStCodeSnippets_py/Astronomy/: ObsLim.py  Rates.py
LuStCodeSnippets_py/PlExtension/: plConvenience.py
LuStCodeSnippets_py/Plots/: Elements.py
LuStCodeSnippets_py/Styles/: PlotStyles.py
LuStCodeSnippets_py/astronomy/: passbands.py
LuStCodeSnippets_py/plots/: elements.py  gantt.py
LuStCodeSnippets_py_demos/Astronomy_demos/: Absmag_demo.ipynb  ObsLims_demo.ipynb  Passbands_demo.ipynb  Rates_demo.ipynb
LuStCodeSnippets_py_demos/PlExtension/: plConvenience.ipynb
LuStCodeSnippets_py_demos/Plots_demos/: Elements_demo.ipynb  GANTT_demo.ipynb
LuStCodeSnippets_py_demos/Styles_demos/: PlotStyles_demo.ipynb
LuStCodeSnippets_py_demos/astronomy_demos/: absmag_demo.ipynb  passbands_demo.ipynb
LuStCodeSnippets_py_demos/plots_demos/: elements_demo.ipynb  gantt_demo.ipynb
LuStCodeSnippets_py_demos/styles_demos/: plot_styles_demo.ipynb
LuStCodeSnippets_py_tests/astronomy/: Absmag_test.py  ObsLim_test.py  Rates_test.py  absmag_test.py
LuStCodeSnippets_sh/: git_routines.sh  hypsearch.sh  lust_codesnippets.sh  makemontage.sh  parallelization.sh
astronomy/: absmag.py
data/: lut_snana_snia.csv  passband_specs.csv
demos/astronomy_demos/: absmag_demo.ipynb
pipelines_py/: plots.ipynb
src/: CodeSnippets.jl  LuStCodeSnippets.jl
src_jl_demos/: Colorings_demo.jl
src_jl_tests/: Colorings_test.jl
src_py/astronomy/: absmag.py
src_py/plots/: gantt.py
src_py_demos/astronomy_demos/: absmag_demo.ipynb
src_py_demos/plots/: gantt.ipynb  gantt_demo.ipynb
src_py_tests/astronomy/: absmag_test.py
