[build-system]
requires = [ "hatchling >= 1.26",]
build-backend = "hatchling.build"

[project]
name = "CodeSnippets_py"
version = "0.0.1"
description = "repository of some useful code snippets in various programming languages."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "MIT"
license-files = [ "LICEN[CS]E*",]
dependencies = [ "astropy==6.1.7", "astropy-iers-data==0.2025.4.7.0.35.30", "asttokens==3.0.0", "comm==0.2.2", "contourpy==1.3.1", "cycler==0.12.1", "debugpy==1.8.13", "decorator==5.2.1", "exceptiongroup==1.2.2", "executing==2.2.0", "fonttools==4.57.0", "iniconfig==2.1.0", "ipykernel==6.29.5", "ipython==8.34.0", "jedi==0.19.2", "jupyter_client==8.6.3", "jupyter_core==5.7.2", "kiwisolver==1.4.8", "matplotlib==3.10.1", "matplotlib-inline==0.1.7", "nest-asyncio==1.6.0", "numpy==2.2.4", "packaging==24.2", "parso==0.8.4", "pexpect==4.9.0", "pillow==11.1.0", "platformdirs==4.3.7", "pluggy==1.5.0", "polars==1.26.0", "prompt_toolkit==3.0.50", "psutil==7.0.0", "ptyprocess==0.7.0", "pure_eval==0.2.3", "pyerfa==2.0.1.5", "Pygments==2.19.1", "pyparsing==3.2.3", "pytest==8.3.5", "python-dateutil==2.9.0.post0", "PyYAML==6.0.2", "pyzmq==26.4.0", "scipy==1.15.2", "six==1.17.0", "stack-data==0.6.3", "toml==0.10.2", "tornado==6.4.2", "traitlets==5.14.3", "typing_extensions==4.13.1", "wcwidth==0.2.13",]
[[project.authors]]
name = "Lukas Steinwender"
email = ""

[[project.maintaners]]
name = "Lukas Steinwender"
email = ""

[project.urls]
Homepage = "https://github.com/TheRedElement/code_snippets"
Issues = "https://github.com/TheRedElement/code_snippets/issues"

[tool.hatch.build.targets.wheel]
packages = [ "CodeSnippets_py",]
