[build-system]
requires = [ "hatchling >= 1.26",]
build-backend = "hatchling.build"

[project]
name = "LuStCodeSnippets_py"
version = "0.1.0"
description = "repository of some useful code snippets in various programming languages."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "MIT"
license-files = [ "LICEN[CS]E*",]
dependencies = [ "astropy==6.1.7", "cycler==0.12.1", "matplotlib==3.10.3", "numpy==2.2.6", "polars==1.30.0", "pytest==8.3.5", "toml==0.10.2",]
[[project.authors]]
name = "Lukas Steinwender"
email = ""

[[project.maintaners]]
name = "Lukas Steinwender"
email = ""

[project.urls]
Homepage = "https://github.com/TheRedElement/code_snippets"
Issues = "https://github.com/TheRedElement/code_snippets/issues"

[tool.hatch.build.targets.wheel]
packages = [ "LuStCodeSnippets_py",]
